--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.2",
     "@tailwindcss/vite": "^4.1.4",
     "i18next": "^24.2.3",
     "prop-types": "^15.8.1",
