--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
   "dependencies": {
     "@calcom/embed-react": "^1.5.2",
     "@tailwindcss/vite": "^4.1.4",
+    "firebase": "^11.7.1",
     "i18next": "^24.2.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.56.3",
     "react-i18next": "^15.4.1",
+    "react-router-dom": "^7.6.0",
     "react-vertical-timeline-component": "^3.5.3",
     "swiper": "^11.2.6",
     "tailwindcss": "^4.1.4"
