--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite --host",
     "build": "tsc -b && vite build",
+    "deploy": "tsc -b && vite build && firebase deploy",
     "lint": "eslint .",
     "preview": "vite preview"
   },
