--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "firebase": "^11.7.1",
     "i18next": "^24.2.3",
+    "i18next-browser-languagedetector": "^8.1.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
